fixed overflow issue on iOS

--- a/src/styles/elements/Tableau.module.scss
+++ b/src/styles/elements/Tableau.module.scss
@@ -17,11 +17,11 @@ $header-footer-space: 4rem;
     $total-gap-height: calc((var(--minor-axis-size)) * #{global.$card-gap});
 
     $max_cell-width: calc(
-      (100vw - #{$total-gap-width}) / var(--major-axis-size)
+      (100dvw - #{$total-gap-width}) / var(--major-axis-size)
     );
     $max_cell-height: calc(
       (
-          100vh - #{$total-gap-height} - #{$container-padding} - #{$header-footer-space}
+          100dvh - #{$total-gap-height} - #{$container-padding} - #{$header-footer-space}
         ) / var(--minor-axis-size)
     );
 
@@ -42,11 +42,11 @@ $header-footer-space: 4rem;
     $total-gap-height: calc((var(--major-axis-size)) * #{global.$card-gap});
 
     $max_cell-width: calc(
-      (100vw - #{$total-gap-width}) / var(--minor-axis-size)
+      (100dvw - #{$total-gap-width}) / var(--minor-axis-size)
     );
     $max_cell-height: calc(
       (
-          100vh - #{$total-gap-height} - #{$container-padding} - #{$header-footer-space}
+          100dvh - #{$total-gap-height} - #{$container-padding} - #{$header-footer-space}
         ) / var(--major-axis-size)
     );
 
