--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,13 +10,14 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
+html {
+  max-width: 100dvw;
   overflow-x: hidden;
 }
 
 body {
+  max-width: 100dvw;
+  height: 100dvh;
   color: colours.$text-colour;
   background: colours.$background-colour;
 }
