--- a/src/styles/layout/Layout.module.scss
+++ b/src/styles/layout/Layout.module.scss
@@ -1,5 +1,5 @@
 .main {
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
 }
